--- a/dash/Dash.dashsync/Preferences.plist
+++ b/dash/Dash.dashsync/Preferences.plist
@@ -560,7 +560,7 @@
 			<key>rspec-expectations</key>
 			<dict>
 				<key>date</key>
-				<date>2023-09-21T07:30:56Z</date>
+				<date>2024-07-01T10:43:20Z</date>
 				<key>entry</key>
 				<dict>
 					<key>name</key>
@@ -574,7 +574,7 @@
 			<key>sidekiq</key>
 			<dict>
 				<key>date</key>
-				<date>2021-11-16T11:40:26Z</date>
+				<date>2024-05-07T14:23:41Z</date>
 				<key>entry</key>
 				<dict>
 					<key>name</key>
@@ -798,7 +798,7 @@
 			<key>tldr</key>
 			<dict>
 				<key>date</key>
-				<date>2023-09-21T07:22:38Z</date>
+				<date>2024-06-26T10:40:19Z</date>
 				<key>entry</key>
 				<dict>
 					<key>aliases</key>
@@ -810,7 +810,7 @@
 					<key>authorLinkHref</key>
 					<string>https://github.com/Kapeli/Dash-User-Contributions/tree/master/docsets/tldr#readme</string>
 					<key>authorLinkText</key>
-					<string>Moddus</string>
+					<string>cvn</string>
 					<key>name</key>
 					<string>tldr pages</string>
 					<key>platform</key>
@@ -1022,6 +1022,8 @@
 	<real>1.1499998569488525</real>
 	<key>actuallyDarkWebView</key>
 	<false/>
+	<key>annotationsAreShown</key>
+	<false/>
 	<key>bookmarks</key>
 	<array>
 		<dict>
@@ -1065,6 +1067,11 @@
 				<key>date</key>
 				<date>2023-09-21T07:22:38Z</date>
 			</dict>
+			<key>http://kapeli.com/feeds/Ruby_3.xml</key>
+			<dict>
+				<key>date</key>
+				<date>2024-04-29T08:05:40Z</date>
+			</dict>
 			<key>http://kapeli.com/feeds/TypeScript.xml</key>
 			<dict>
 				<key>date</key>
@@ -1077,11 +1084,6 @@
 			<dict>
 				<key>date</key>
 				<date>2021-03-17T13:57:20Z</date>
-			</dict>
-			<key>http://kapeli.com/feeds/Ruby_3.xml</key>
-			<dict>
-				<key>date</key>
-				<date>2021-10-21T06:58:54Z</date>
 			</dict>
 			<key>http://kapeli.com/feeds/Ruby_on_Rails_6.xml</key>
 			<dict>
@@ -1111,7 +1113,7 @@
 			<key>name</key>
 			<string>Default</string>
 			<key>searchSnippets</key>
-			<true/>
+			<false/>
 		</dict>
 		<dict>
 			<key>icon</key>
@@ -1120,6 +1122,19 @@
 			<string>Snippets Only</string>
 			<key>placeholder</key>
 			<string>Search Snippets</string>
+			<key>searchSnippets</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>docsets</key>
+			<array>
+				<string>~/Library/Application Support/Dash/Versioned DocSets/Ruby on Rails 7 - DHDocsetDownloader/7-1-3/Ruby on Rails.docset</string>
+				<string>~/Library/Application Support/Dash/DocSets/Ruby_3/Ruby.docset</string>
+			</array>
+			<key>name</key>
+			<string>TT</string>
+			<key>placeholder</key>
+			<string>TT</string>
 			<key>searchSnippets</key>
 			<true/>
 		</dict>
@@ -1228,6 +1243,23 @@
 					</dict>
 				</dict>
 			</dict>
+			<key>graphql-pagination</key>
+			<dict>
+				<key>2.2.0</key>
+				<dict>
+					<key>date</key>
+					<date>2024-04-29T08:16:23Z</date>
+					<key>entry</key>
+					<dict>
+						<key>name</key>
+						<string>graphql-pagination</string>
+						<key>platform</key>
+						<string>rubyGems</string>
+						<key>uniqueIdentifier</key>
+						<string>graphql-pagination</string>
+					</dict>
+				</dict>
+			</dict>
 			<key>rspec-rails</key>
 			<dict>
 				<key>4.0.2</key>
@@ -1293,13 +1325,7 @@
 			<key>http://kapeli.com/feeds/Ruby_2.xml</key>
 			<dict/>
 			<key>http://kapeli.com/feeds/Ruby_3.xml</key>
-			<dict>
-				<key>3.1.2</key>
-				<dict>
-					<key>date</key>
-					<date>2023-09-21T07:29:21Z</date>
-				</dict>
-			</dict>
+			<dict/>
 			<key>http://kapeli.com/feeds/Ruby_on_Rails_5.xml</key>
 			<dict>
 				<key>5.2.4</key>
@@ -1309,19 +1335,18 @@
 				</dict>
 			</dict>
 			<key>http://kapeli.com/feeds/Ruby_on_Rails_6.xml</key>
-			<dict>
-				<key>6.1.4</key>
-				<dict>
-					<key>date</key>
-					<date>2023-09-21T07:26:13Z</date>
-				</dict>
-			</dict>
+			<dict/>
 			<key>http://kapeli.com/feeds/Ruby_on_Rails_7.xml</key>
 			<dict>
 				<key>7.0.4</key>
 				<dict>
 					<key>date</key>
 					<date>2022-11-29T17:03:47Z</date>
+				</dict>
+				<key>7.1.3</key>
+				<dict>
+					<key>date</key>
+					<date>2024-06-26T10:43:06Z</date>
 				</dict>
 			</dict>
 		</dict>
@@ -1348,6 +1373,14 @@
 					<date>2022-11-24T07:57:20Z</date>
 				</dict>
 			</dict>
+			<key>http://kapeli.com/feeds/Ruby_3.xml</key>
+			<dict>
+				<key>3.1.2</key>
+				<dict>
+					<key>date</key>
+					<date>2024-04-29T08:05:16Z</date>
+				</dict>
+			</dict>
 			<key>http://kapeli.com/feeds/Ruby_on_Rails_5.xml</key>
 			<dict>
 				<key>5.0.2</key>
@@ -1368,6 +1401,11 @@
 					<key>date</key>
 					<date>2021-03-10T12:26:42Z</date>
 				</dict>
+				<key>6.1.4</key>
+				<dict>
+					<key>date</key>
+					<date>2024-04-29T08:04:58Z</date>
+				</dict>
 			</dict>
 			<key>http://kapeli.com/feeds/Ruby_on_Rails_7.xml</key>
 			<dict>
@@ -1375,6 +1413,11 @@
 				<dict>
 					<key>date</key>
 					<date>2022-11-24T07:57:41Z</date>
+				</dict>
+				<key>7.0.8</key>
+				<dict>
+					<key>date</key>
+					<date>2024-06-26T10:42:49Z</date>
 				</dict>
 			</dict>
 		</dict>
